--- a/data-architect.html
+++ b/data-architect.html
@@ -127,7 +127,7 @@ applications?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... We are looking to add a Data Architect to our team here at Centare. In this newly 
 created role, you will be responsible for building the foundation of our?...</p>
@@ -149,7 +149,7 @@ created role, you will be responsible for building the foundation of our?...</p>
 <p>3 days ago ... The Architect will play a critical role in designing, developing and implementing 
 high performing applications using NOSQL DB and BigData...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/c7igjkjogkzdou4jweofrxamue'>Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -217,7 +217,7 @@ Acts as a data SME for those domains. Responsible for all issues and its?...</p>
 <p>6 days ago ... Creation, optimization and maintenance of conceptual, logical and physical 
 database models; Documentation of functional requirements and system?...</p>
 <hr/>
-<h5><a href='https://wipro.referrals.selectminds.com/jobs/data-center-and-cloud-architect-11502'>Data Center and Cloud Architect - Wipro Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wipro.referrals.selectminds.com/jobs/data-center-and-cloud-architect-11502'>Data Center and Cloud Architect - Wipro Careers</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -233,7 +233,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-15</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/20LD1S16bs/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/20LD1S16bs/Data-Architect'>Data Architect - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -249,7 +249,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -287,7 +287,7 @@ class?...</p>
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://alley.breezy.hr/p/a85fc788646c-master-data-architect'>Master Data Architect at Alley Recruits</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -299,11 +299,11 @@ class?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691373863-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691373863-senior-data-analytics-architect'>CapTech Consulting Senior Data &amp; Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ouster/jobs/1750046'>Job Application for Data Architect at Ouster</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ouster/jobs/1750046'>Job Application for Data Architect at Ouster</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 29, 2019 ... We're looking for an expert communicator with a strong customer orientation and 
 object-oriented programming experience to join our IT team as a Data Architect?...</p>
@@ -320,7 +320,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-07</p>
 <hr/>
-<h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -450,7 +450,7 @@ bricks-and-mortar retail world with innovative products that fuel...</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c2b42c10-d9b8-4e0f-9ec4-6155c16fbd9c'>Datacom - Senior Security Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/c2b42c10-d9b8-4e0f-9ec4-6155c16fbd9c'>Datacom - Senior Security Architect</a></h5> 
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
