--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -91,7 +91,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -185,11 +185,11 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=ne6qPKwO'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=ne6qPKwO'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -202,7 +202,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -284,7 +284,7 @@ and can identify the driving forces behind revenue growth. In other words, they?
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://carwow.workable.com/jobs/1070077'>Business Intelligence Manager - Apply online - carwow - Jobs</a></h5> 
+<h5><a href='https://carwow.workable.com/jobs/1070077'>Business Intelligence Manager - Apply online - carwow - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... You will join our fast growing Data function and will take our business insights, 
 reporting infrastructure and visualisation to the next level. BI touches every part of
@@ -326,7 +326,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -420,11 +420,11 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://columbia.referrals.selectminds.com/jobs/business-intelligence-bi-engineer-7889'>Business Intelligence (BI) Engineer - Columbia Sportswear Company Careers</a></h5> 
+<h5><a href='https://columbia.referrals.selectminds.com/jobs/business-intelligence-bi-engineer-7889'>Business Intelligence (BI) Engineer - Columbia Sportswear Company Careers</a></h5> 
 <p><span class="badge badge-light">United States, Oregon, Portland</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://trustedshops.recruitee.com/l/fr/o/business-intelligence-analyst-wmdiv'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trustedshops.recruitee.com/l/fr/o/business-intelligence-analyst-wmdiv'>
       Business Intelligence Analyst (w/m/div.) - Trusted Shops GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -438,7 +438,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/groupm-emea/job/o21yafwv'>GroupM EMEA Careers - Business Intelligence Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/groupm-emea/job/o21yafwv'>GroupM EMEA Careers - Business Intelligence Product Manager</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
