--- a/deep-learning.html
+++ b/deep-learning.html
@@ -77,7 +77,7 @@
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691950514-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -131,7 +131,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Amsterdam Amsterdam</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... ... artificial intelligence and self-driving cars. Learn more about NVIDIA. Solutions 
 Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...</p>
@@ -173,7 +173,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Speech and Language Processing)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -257,7 +257,7 @@ daytime?...</p>
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-06-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/a/jobs/1726087'>Job Application for Sr. Software Engineer, Deep Learning Infrastructure at A? by Airbus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/a/jobs/1726087'>Job Application for Sr. Software Engineer, Deep Learning Infrastructure at A? by Airbus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-08</p>
 <hr/>
@@ -297,11 +297,11 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-29</p>
 <hr/>
-<h5><a href='https://visenze.workable.com/j/BB3C89F812'>ViSenze - Artificial Intelligence for the Visual Web - Jobs: Applied Research Engineer, Computer Vision and Deep Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visenze.workable.com/j/BB3C89F812'>ViSenze - Artificial Intelligence for the Visual Web - Jobs: Applied Research Engineer, Computer Vision and Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-05-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/e4nb417rhzs99yyy4c5eiewohc'>Executive Director, Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/e4nb417rhzs99yyy4c5eiewohc'>Executive Director, Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-05-21</p>
 <hr/>
@@ -315,7 +315,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Hsinchu</span></p>
 <p>Posted on: 2019-05-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -387,7 +387,7 @@ Project?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -415,11 +415,11 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/deepgenomics/3160c2c8-0414-457a-891d-c41b54c80dfe'>Deep Genomics - Scientist ? Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/deepgenomics/3160c2c8-0414-457a-891d-c41b54c80dfe'>Deep Genomics - Scientist ? Machine Learning</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1598066/'>Deep Learning Engineer, Core Modeling in Boston | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1598066/'>Deep Learning Engineer, Core Modeling in Boston | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -427,7 +427,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615734/'>Deep Learning Engineer, Core Modeling in Denver | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615734/'>Deep Learning Engineer, Core Modeling in Denver | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
